# Refactoring_dino

./: .gitignore  Apply_Trainer.py  README.md  apply_trainer.py  box_back_end.py  box_maker.py  color_maps.py  csv_concat.py  csv_fraction.py  custom_datamodule.py  custom_dataset.py  custom_net.py  filterCollect.csv  filter_back_end.py  filter_worker.py  my_trainer.py  open_file.py  pyproject.toml  requirements.txt
