[project]
name = "refactoring-dino"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "absl-py==2.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.14",
    "aiosignal==1.3.2",
    "attrs==25.3.0",
    "colorama==0.4.6",
    "filelock==3.13.1",
    "frozenlist==1.5.0",
    "fsspec==2024.6.1",
    "grpcio==1.71.0",
    "idna==3.10",
    "jinja2==3.1.4",
    "joblib==1.4.2",
    "lightning-utilities==0.14.1",
    "markdown==3.7",
    "markupsafe==2.1.5",
    "mpmath==1.3.0",
    "multidict==6.2.0",
    "networkx==3.3",
    "numpy==2.1.2",
    "opencv-python==4.11.0.86",
    "packaging==24.2",
    "pandas==2.2.3",
    "pillow==11.0.0",
    "propcache==0.3.0",
    "protobuf==6.30.1",
    "python-dateutil==2.9.0.post0",
    "pytorch-lightning==2.5.0.post0",
    "pytz==2025.1",
    "pyyaml==6.0.2",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "setuptools==70.2.0",
    "six==1.17.0",
    "sympy==1.13.1",
    "tensorboard==2.19.0",
    "tensorboard-data-server==0.7.2",
    "threadpoolctl==3.6.0",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchmetrics==1.6.3",
    "torchvision>=0.21.0",
    "tqdm==4.67.1",
    "typing-extensions==4.12.2",
    "tzdata==2025.1",
    "werkzeug==3.1.3",
    "yarl==1.18.3",
]
